--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "categories": [
     "Other"
   ],
+  "repository": {
+    "url": "https://github.com/grqphical/vsscope"
+  },
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
